# typst-linalg

./: Cargo.toml  lib.typ  rust.wasm  test.typ
src/: commands.rs  lib.rs  types.rs  utils.rs
src/commands/: matrix_apply.rs  matrix_io.rs  matrix_operations.rs  matrix_operations_scalar.rs  matrix_views.rs
src/commands/matrix_apply/: sigmoid.rs
