[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = "0.1.0"
nalgebra = { version = "*", features = ["serde-serialize"] }
serde_cbor = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.2"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace
